# pwnagotchizero32

./: .gitattributes  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  SPEC.md
.github/workflows/: bake-hybrid.yml  build.yml  daemon.yml
config/: config-32bit  config-64bit
docker/: Dockerfile.build
rust/: Cargo.toml  defaults.toml
rust/.cargo/: config.toml
rust/src/: epoch.rs  main.rs
rust/src/attacks/: mod.rs
rust/src/bluetooth/: mod.rs
rust/src/capture/: mod.rs
rust/src/config/: mod.rs
rust/src/display/: api.rs  buffer.rs  driver.rs  mod.rs
rust/src/migration/: mod.rs
rust/src/personality/: mod.rs
rust/src/pisugar/: mod.rs
rust/src/plugins/: mod.rs
rust/src/recovery/: mod.rs
rust/src/web/: mod.rs  state.rs
rust/src/wifi/: mod.rs
rust/templates/: dashboard.html
scripts/: bake_on_pwnagotchi.sh  bake_release.sh  build_oxigotchi.sh  deploy-oxigotchi.sh
stage3/: EXPORT_IMAGE  prerun.sh
stage3/00-pre-pwn/: 00-run.sh
stage3/01-pwn-packages/: 00-run.sh
stage3/02-libpcap/: 00-run.sh
stage3/03-bettercap-pwngrid/: 00-run.sh
stage3/04-nexmon/: 00-run.sh
stage3/05-install-oxigotchi/: 00-run.sh
stage3/05-install-oxigotchi/files/etc/NetworkManager/conf.d/: 99-bt-pan.conf  99-unmanage-usb0.conf
stage3/05-install-oxigotchi/files/etc/NetworkManager/system-connections/: usb0.nmconnection
stage3/05-install-oxigotchi/files/etc/pwnagotchi/: config.toml
stage3/05-install-oxigotchi/files/etc/pwnagotchi/custom-plugins/: auto-backup.lua  bt-tether.lua  hashcat-sync.lua  memtemp.lua  pwncrack.lua  wpa-sec.lua
stage3/05-install-oxigotchi/files/etc/systemd/system/: bt-agent.service  bt-pan@.service  epd-startup.service  nm-watchdog.service  oxigotchi.service  rsync-zram.service  rsync-zram.timer  safe-shutdown.service  usb-gadget.service  wifi-country.service  zram-data.service  zram-log.service
stage3/05-install-oxigotchi/files/lib/systemd/system-shutdown/: safe-shutdown.sh
